--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Taei</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Taei's Site</title>
+    <style>
+      body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
+      .box { max-width: 700px; padding: 20px; border: 2px solid #000; border-radius: 12px; }
+      button { padding: 10px 14px; font-size: 16px; cursor: pointer; }
+    </style>
   </head>
   <body>
-    <h1>김태이</h1>
-    <h1>천재</h1>
+    <div class="box">
+      <h1>Hi, I'm Taei</h1>
+      <p>This is my first website hosted on GitHub Pages.</p>
+
+      <h2>Links</h2>
+      <ul>
+        <li><a href="https://github.com/supertaei" target="_blank">My GitHub</a></li>
+      </ul>
+
+      <h2>Button test</h2>
+      <p id="msg">Click the button.</p>
+      <button onclick="document.getElementById('msg').textContent='Button works!'">
+        Click me
+      </button>
+    </div>
   </body>
 </html>
