--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <button id="btn">Click me</button>
       </div>
       
-      <h1>What ive been working on</h1>
+      <h1>What I've been working on</h1>
       
       <!-- What ive been working on Card-->
       <div class="card">
