--- a/index.html
+++ b/index.html
@@ -144,15 +144,8 @@
           </ul>
         </div>
       </div>
-
-      <!-- Mini Interaction Card -->
-      <div class="card">
-        <h2>Mini interaction</h2>
-        <p id="status">Click the button.</p>
-        <button id="btn">Click me</button>
-      </div>
       
-      <h1>What I've been working on</h1>
+      <h1>What ive been working on</h1>
       
       <!-- What ive been working on Card-->
       <div class="card">
@@ -162,6 +155,7 @@
             Based on the minigame from Minecraft.
             Made with roblox studio in 7 days.
             Lot of fun to play with friends.
+            PLEASE PLAY IT WITH FRIENDS!!!
         </p>
         <a href="https://www.roblox.com/games/84965896496553/Spleef" target="_blank" rel="noopener">
           TheGame
